2001-10-05  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/base.py (Database.__init__): New method.
	(Database.GetPath): Return the stored value.
	* qm/test/cmdline.py (Command.Execute): Convert the database
	path to an absolute path, if it isn't already one.
	* qm/test/xmldb.py (Database.__init__): Call the base class
	initializer.  Don't store path.
	(Database.GetClassPaths): Use GetPath, not __path, to retrieve
	the database path.
	(Database.GetPath): Remove.

2001-10-04  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (SUBDIRS): Add doc.
	(install): Change invocation of install.py.
	(clean): New target.
	* configure.in (AC_OUTPUT): Add qm/setup_path.py.
	* configure: Regenerated.
	* install.py: Rework generation of scripts.
	* standard.mk.in (.PHONY): Add clean.
	* doc/manual/Makefile.in (clean::): New rule.
	* qm/Makefile.in (setup_path.py): Remove rule.
	(SCRIPTS): Simplify.
	* qm/attachment.py: Fix formatting.
	* qm/qm.sh: New file.
	* qm/test/qmtest-remote.in: Rename to ...
	* qm/test/qmtest-remote.py: ... this.
	* qm/test/qmtest.in: Rename to ...
	* qm/test/qmtest.py: ... this.
	* qm/track/qmtrack.in: Rename to ...
	* qm/track/qmtrack.py: ... this.
	* sgmlop/Makefile.in (clean): Use double-colon rule.
	* zope-dtml/ExtensionClass/Makefile.in (clean): Likewise.
	
2001-10-04  Alex Samuel  <samuel@codesourcery.com>

	* README: Mention test suite.

2001-10-04  Alex Samuel  <samuel@codesourcery.com>

	* unit.qms/test.qms/classes.qms/scripttest3.qmt: Update.
	* unit.qms/track.qms/export.qms/export1.qmt: Remove obsolete test.
	* unit.qms/track.qms/export.qms/export2.qmt: Likewise.
	* unit.qms/track.qms/export.qms/setup_idb.qmt: Likewise.
	* unit.qms/track.qms/export.qms/idb.qma: Remove action.

2001-10-04  Mark Mitchell  <mark@codesourcery.com>

	* qm/web.py (WebServer.__init__): Document meaning of using
	0 as the port.
	(WebServer.Bind): Handle port 0 specially.
	* qm/test/cmdline.py (Command.__ExecuteServer): Use port 0